# mnist-sagemaker-example

./: .example.env  .gitignore  README.md  pyproject.toml
src/: sagemaker_config.py  sagemaker_deployment.py  sagemaker_training.py  train_model.py
src/mnist/: model.py
