[project]
name = "mnist-sagemaker-example"
version = "0.1.0"
description = "Test Sagemaker serverless inference"
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "tensorflow==2.8.0",
    "numpy>=1.22,<1.25",
    "pandas>=2.0,<3.0",
    "scikit-learn>=1.3,<1.4",
    "protobuf<=3.20.3",
    "sagemaker>=2.243.2",
    "dotenv>=0.9.9",
]
